# memorafy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  SECURITY.md  dev.cmd  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json  macos.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/keys/: .gitignore  memora.key.pub  memorafy.key.pub
apps/desktop/src-tauri/src/: crypto.rs  feedback.rs  keychain.rs  lib.rs  logging.rs  macos_popover.rs  main.rs  windows_tray.rs
apps/desktop/src-tauri/src/clipboard/: concealed.rs  content.rs  images.rs  mod.rs  watcher.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/db/: models.rs  queries.rs
apps/desktop/src-tauri/src/db/migrations/: 001_initial.sql
apps/desktop/src-tauri/src/sync/: auth.rs  auth_callback.rs  client.rs  config.rs  mod.rs  realtime.rs
apps/desktop/src-tauri/src/timeline/: mod.rs
apps/desktop/src/components/onboarding/: OnboardingFlow.tsx
apps/desktop/src/components/quick-paste/: QuickPasteLauncher.tsx
apps/desktop/src/components/settings/: AuthForms.tsx  ClearHistorySettings.tsx  CollectionsSettings.tsx  FeedbackSettings.tsx  SettingsPanel.tsx
apps/desktop/src/components/snippets/: SnippetEditorModal.tsx  SnippetsTabHeader.tsx
apps/desktop/src/components/tray/: TrayPanel.tsx
apps/desktop/src/components/ui/: ActionToast.tsx  CollectionChips.tsx  CollectionPickerMenu.tsx  PreviewCard.tsx  SyncToast.tsx  TabBar.tsx  UpdateToast.tsx
apps/desktop/src/lib/: api.ts  theme.ts  updater.ts
apps/desktop/src/stores/: app-store.ts
scripts/: copy-updater-private-key.ps1  generate-updater-keys.ps1  generate-updater-keys.sh  sync-updater-pubkey.mjs
services/migrations/: 001_cloud_schema.sql  006_devices_rpc_only.sql  007_clear_leaked_blob_paths.sql  008_dedupe_devices.sql  009_fix_items_sync.sql  010_clip_blob_storage.sql  README.md  SETUP_ALL.sql
services/supabase/: config.toml
services/supabase/migrations/: 20260703000000_baseline.sql  20260703010000_user_encryption_keys.sql  20260703020000_clear_leaked_blob_paths.sql  20260703120000_fix_items_sync.sql  20260703140000_clip_blob_storage.sql
services/supabase/templates/: confirmation.html  recovery.html
