[package]
name = "memorafy-desktop"
version = "1.0.0"
description = "Memorafy - Your personal cross-device memory"
authors = ["Memorafy"]
edition = "2021"
license = "MIT"

[lib]
name = "memorafy_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
arboard = "3.4"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
parking_lot = "0.12"
hostname = "0.4"
regex = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
dotenvy = "0.15"
url = "2"
urlencoding = "2"
# keyring ships no default credential backend — these features select the
# real OS store (Windows Credential Manager / macOS Keychain). Each feature
# only pulls in its platform-gated dependency, so listing both here is safe
# on every target.
keyring = { version = "3", features = ["windows-native", "apple-native"] }
# End-to-end encryption of synced clipboard content.
chacha20poly1305 = "0.10"
argon2 = "0.5"
hmac = "0.12"
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-nspopover = { git = "https://github.com/freethinkel/tauri-nspopover-plugin.git", version = "4.1.0" }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
